[gd_scene load_steps=7 format=3 uid="uid://4d0u7h8qw4yg"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_i0kir"]
[ext_resource type="Texture2D" uid="uid://3kwvxc5otp8m" path="res://background.jpg" id="2_tlk7y"]

[sub_resource type="SystemFont" id="SystemFont_at25s"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_5qm2w"]

[sub_resource type="SystemFont" id="SystemFont_dn5dj"]

[sub_resource type="SystemFont" id="SystemFont_jqoc8"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i0kir")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tlk7y")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.919999, 0.774607)
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
tooltip_text = "
"
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.458824, 0, 0.490196, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.419608, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_at25s")
theme_override_font_sizes/font_size = 40
text = "DEMON OF THE FALL
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Seperator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_5qm2w")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_dn5dj")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_jqoc8")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
